--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -2,44 +2,32 @@
 #  BACKEND
 # ------------------------------------------------------------------------------
 
-webburza_location_type:
-    resource: |
-        alias: webburza_location.location_type
-        templates: SyliusAdminBundle:Crud
-        redirect: update
-        grid: webburza_location_type
-        vars:
-            all:
-                subheader: sylius.ui.locationType
-                templates:
-                    form:   WebburzaSyliusLocationBundle:LocationType:_form.html.twig
-            index:
-                icon: archive
-    type: sylius.resource
-    prefix: /admin
-
 webburza_location:
     resource: |
+        section: admin
         alias: webburza_location.location
         templates: SyliusAdminBundle:Crud
         redirect: update
         grid: webburza_location
         vars:
             all:
-                subheader: sylius.ui.location
+                icon: marker
                 templates:
-                    form:   WebburzaSyliusLocationBundle:Location:_form.html.twig
-            index:
-                icon: archive
+                    form: WebburzaSyliusLocationBundle:Backend/Location:_form.html.twig
     type: sylius.resource
     prefix: /admin
 
-webburza_location_location_image_delete:
-    path: /admin/location-image/{id}
-    methods: [DELETE]
-    defaults:
-        _controller: webburza_location.controller.location_image:deleteAction
-        _sylius:
-            redirect:
-                route: webburza_location_location_show
-                parameters: { id: $locationId }
+webburza_location_type:
+    resource: |
+        section: admin
+        alias: webburza_location.location_type
+        templates: SyliusAdminBundle:Crud
+        redirect: update
+        grid: webburza_location_type
+        vars:
+            all:
+                icon: sitemap
+                templates:
+                    form: WebburzaSyliusLocationBundle:Backend/LocationType:_form.html.twig
+    type: sylius.resource
+    prefix: /admin
